# insure-guide

./: .env.example  package.json
docs/: README.md  form-field-extraction.md
src/: index.ts
src/lib/: ai.ts  env.ts  logger.ts  supabase.ts
src/lib/agents/: system-prompt.ts
src/lib/ai/: pdf-providers.ts  summarize.ts
src/lib/db/: conversation.ts  user.ts
src/lib/forms/: annotate.ts  dc-medicaid-schema.ts  field-schema.ts  ingest.ts  pdf-extract-prompts.ts  pdf-extract.ts  pdf-parse.ts  pdf-render.ts  resolve-user.ts  service.ts  storage.ts  submission-service.ts
src/lib/memory/: compaction.ts  conversation-memory.ts
src/lib/query/: openai-stream.ts
src/lib/rag/: build-context.ts  embed.ts  retrieve.ts
src/lib/tools/: context.ts  form-fill.ts  form-search.ts  index.ts  question-answering.ts  rag-lookup.ts
src/routes/: forms.ts  query.ts  vapi-webhook.ts
voice/: pyproject.toml
voice/src/insure_voice/: __init__.py  bridge.py  config.py  language_router.py  privacy.py  providers.py  tools.py
voice/tests/: test_config.py  test_language_router.py  test_latency.py  test_server.py
