[project]
name = "insure-guide-voice"
version = "0.1.0"
description = "Low-latency Pipecat voice service for InsureGuide"
requires-python = ">=3.12,<3.14"
dependencies = [
  "httpx>=0.28,<1",
  "pipecat-ai[groq,kokoro,ollama,runner,silero,websocket]>=1.4.0,<2",
  "pydantic-settings>=2.10,<3",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]
local-macos = [
  "pipecat-ai[mlx-whisper]>=1.4.0,<2",
]
local-linux = [
  "pipecat-ai[whisper]>=1.4.0,<2",
]
ultra = [
  "pipecat-ai[cartesia,deepgram]>=1.4.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insure_voice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["bot.py", "src", "tests"]
